[project]
name = "haystack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "settings.py",
]
line-length = 119
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing-trailing-comma
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
