[project]
name = "haystack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "coverage>=7.10.7",
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "django-htmx>=1.26.0",
    "django-stubs[compatible-mypy]>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "selenium-wire>=5.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "settings.py",
]
line-length = 119
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # any-type
    "COM812",   # missing-trailing-comma
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D106",     # Missing docstring in public nested class
    "D107",     # Missing docstring in `__init__`
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "EM101",    # raw-string-in-exception
    "FBT001",   # Boolean-typed positional argument
    "FBT002",   # Boolean default positional argument
    "PLR2004",  # magic-value-comparison
    "PYI018",   # unused-private-type-var
    "PYI047",   # unused-private-type-alias
    "TRY003",   # raise-vanilla-args
    "UP040",    # non-pep695-type-alias
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"*/apps.py" = [
    "D101",     # Missing docstring in public class
]
"*/management/commands/*" = [
    "ARG002",   # Unused method argument
    "D101",     # Missing docstring in public class
]
"*/tests/*" = [
    "S101",     # assert
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "haystack.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/settings/*",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["environ.*"]
follow_untyped_imports = true

[tool.django-stubs]
django_settings_module = "haystack.settings"
